# ranim

./: .gitignore  .shellhook  shell  shell.nix
dev/: Cargo.toml  profile
dev/src/: growth.rs  kdtree.rs  main.rs  orbits.rs  point.rs  webs.rs
dev/src/growth_lib/: bench.rs  mod.rs
dev/src/kdtree_lib/: bench.rs  mod.rs
dev/src/webs_lib/: bench.rs  mod.rs
