[package]
name = "ranim"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayvec = "0.5.1"
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"
rand = "0.7.2"

[[bin]]
name = "orbits"
path = "src/orbits.rs"

[[bin]]
name = "webs"
path = "src/webs.rs"
